// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Game Play > (1) Player 1 places tile [7D] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [4H] [12H] [1E] [6H] | 
P2 | $6000 | [5E] [8H] [3D] [12C] [8G] | 

P1 [End Turn]
`;

exports[`Game Play > (2) Player 1 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [4H] [12H] [1E] [6H] [12F] | 
P2 | $6000 | [5E] [8H] [3D] [12C] [8G] | 

P2 [Choose Tile: [5E] [8H] [3D] [12C] [8G]]
`;

exports[`Game Play > (3) Player 2 places tile [8G] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [4H] [12H] [1E] [6H] [12F] | 
P2 | $6000 | [5E] [8H] [3D] [12C] | 

P2 [End Turn]
`;

exports[`Game Play > (4) Player 2 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [4H] [12H] [1E] [6H] [12F] | 
P2 | $6000 | [5E] [8H] [3D] [12C] [5I] | 

P1 [Choose Tile: [4H] [12H] [1E] [6H] [12F]]
`;

exports[`Game Play > (5) Player 1 places tile [12F] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [4H] [12H] [1E] [6H] | 
P2 | $6000 | [5E] [8H] [3D] [12C] [5I] | 

P1 [End Turn]
`;

exports[`Game Play > (6) Player 1 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -

P1 | $6000 | [4H] [12H] [1E] [6H] [11H] | 
P2 | $6000 | [5E] [8H] [3D] [12C] [5I] | 

P2 [Choose Tile: [5E] [8H] [3D] [12C] [5I]]
`;

exports[`Game Play > (7) Player 2 places tile [8H] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - 0 - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -

P1 | $6000 | [4H] [12H] [1E] [6H] [11H] | 
P2 | $6000 | [5E] [3D] [12C] [5I] | 

P2 [Choose Hotel: A C F I W T L]
`;

exports[`Game Play > (8) Player 2 starts American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - - -
 - - - - - - - - - - - -

P1 | $6000 | [4H] [12H] [1E] [6H] [11H] | 
P2 | $6000 | [5E] [3D] [12C] [5I] | A:1

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (9) Player 2 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - - -
 - - - - - - - - - - - -

P1 | $6000 | [4H] [12H] [1E] [6H] [11H] | 
P2 | $5700 | [5E] [3D] [12C] [5I] | A:2

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (10) Player 2 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - - -
 - - - - - - - - - - - -

P1 | $6000 | [4H] [12H] [1E] [6H] [11H] | 
P2 | $5400 | [5E] [3D] [12C] [5I] | A:3

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (11) Player 2 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - - -
 - - - - - - - - - - - -

P1 | $6000 | [4H] [12H] [1E] [6H] [11H] | 
P2 | $5100 | [5E] [3D] [12C] [5I] | A:4

P2 [End Turn]
`;

exports[`Game Play > (12) Player 2 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - - -
 - - - - - - - - - - - -

P1 | $6000 | [4H] [12H] [1E] [6H] [11H] | 
P2 | $5100 | [5E] [3D] [12C] [5I] [8B] | A:4

P1 [Choose Tile: [4H] [12H] [1E] [6H] [11H]]
`;

exports[`Game Play > (13) Player 1 places tile [11H] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - 0 -
 - - - - - - - - - - - -

P1 | $6000 | [4H] [12H] [1E] [6H] | 
P2 | $5100 | [5E] [3D] [12C] [5I] [8B] | A:4

P1 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (14) Player 1 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - 0 -
 - - - - - - - - - - - -

P1 | $5700 | [4H] [12H] [1E] [6H] | A:1
P2 | $5100 | [5E] [3D] [12C] [5I] [8B] | A:4

P1 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (15) Player 1 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - 0 -
 - - - - - - - - - - - -

P1 | $5400 | [4H] [12H] [1E] [6H] | A:2
P2 | $5100 | [5E] [3D] [12C] [5I] [8B] | A:4

P1 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (16) Player 1 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - 0 -
 - - - - - - - - - - - -

P1 | $5100 | [4H] [12H] [1E] [6H] | A:3
P2 | $5100 | [5E] [3D] [12C] [5I] [8B] | A:4

P1 [End Turn]
`;

exports[`Game Play > (17) Player 1 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - 0 -
 - - - - - - - - - - - -

P1 | $5100 | [4H] [12H] [1E] [6H] [5A] | A:3
P2 | $5100 | [5E] [3D] [12C] [5I] [8B] | A:4

P2 [Choose Tile: [5E] [3D] [12C] [5I] [8B]]
`;

exports[`Game Play > (18) Player 2 places tile [5E] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - 0 -
 - - - - - - - - - - - -

P1 | $5100 | [4H] [12H] [1E] [6H] [5A] | A:3
P2 | $5100 | [3D] [12C] [5I] [8B] | A:4

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (19) Player 2 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - 0 -
 - - - - - - - - - - - -

P1 | $5100 | [4H] [12H] [1E] [6H] [5A] | A:3
P2 | $4800 | [3D] [12C] [5I] [8B] | A:5

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (20) Player 2 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - 0 -
 - - - - - - - - - - - -

P1 | $5100 | [4H] [12H] [1E] [6H] [5A] | A:3
P2 | $4500 | [3D] [12C] [5I] [8B] | A:6

P2 [Choose Shares: A] [End Turn]
`;

exports[`Game Play > (21) Player 2 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - 0 -
 - - - - - - - - - - - -

P1 | $5100 | [4H] [12H] [1E] [6H] [5A] | A:3
P2 | $4200 | [3D] [12C] [5I] [8B] | A:7

P2 [End Turn]
`;

exports[`Game Play > (22) Player 2 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - 0 -
 - - - - - - - - - - - -

P1 | $5100 | [4H] [12H] [1E] [6H] [5A] | A:3
P2 | $4200 | [3D] [12C] [5I] [8B] [2B] | A:7

P1 [Choose Tile: [4H] [12H] [1E] [6H] [5A]]
`;

exports[`Game Play > (23) Player 1 places tile [12H] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - 0 0
 - - - - - - - - - - - -

P1 | $5100 | [4H] [1E] [6H] [5A] | A:3
P2 | $4200 | [3D] [12C] [5I] [8B] [2B] | A:7

P1 [Choose Hotel: C F I W T L]
`;

exports[`Game Play > (24) Player 1 starts Luxor 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $5100 | [4H] [1E] [6H] [5A] | A:3 L:1
P2 | $4200 | [3D] [12C] [5I] [8B] [2B] | A:7

P1 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (25) Player 1 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $4800 | [4H] [1E] [6H] [5A] | A:4 L:1
P2 | $4200 | [3D] [12C] [5I] [8B] [2B] | A:7

P1 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (26) Player 1 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $4500 | [4H] [1E] [6H] [5A] | A:5 L:1
P2 | $4200 | [3D] [12C] [5I] [8B] [2B] | A:7

P1 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (27) Player 1 purchases American 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $4200 | [4H] [1E] [6H] [5A] | A:6 L:1
P2 | $4200 | [3D] [12C] [5I] [8B] [2B] | A:7

P1 [End Turn]
`;

exports[`Game Play > (28) Player 1 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $4200 | [4H] [1E] [6H] [5A] [4I] | A:6 L:1
P2 | $4200 | [3D] [12C] [5I] [8B] [2B] | A:7

P2 [Choose Tile: [3D] [12C] [5I] [8B] [2B]]
`;

exports[`Game Play > (29) Player 2 places tile [8B] 1`] = `
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $4200 | [4H] [1E] [6H] [5A] [4I] | A:6 L:1
P2 | $4200 | [3D] [12C] [5I] [2B] | A:7

P2 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (30) Player 2 purchases Luxor 1`] = `
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $4200 | [4H] [1E] [6H] [5A] [4I] | A:6 L:1
P2 | $4000 | [3D] [12C] [5I] [2B] | A:7 L:1

P2 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (31) Player 2 purchases Luxor 1`] = `
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $4200 | [4H] [1E] [6H] [5A] [4I] | A:6 L:1
P2 | $3800 | [3D] [12C] [5I] [2B] | A:7 L:2

P2 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (32) Player 2 purchases Luxor 1`] = `
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $4200 | [4H] [1E] [6H] [5A] [4I] | A:6 L:1
P2 | $3600 | [3D] [12C] [5I] [2B] | A:7 L:3

P2 [End Turn]
`;

exports[`Game Play > (33) Player 2 ends turn 1`] = `
 - - - - - - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $4200 | [4H] [1E] [6H] [5A] [4I] | A:6 L:1
P2 | $3600 | [3D] [12C] [5I] [2B] [11C] | A:7 L:3

P1 [Choose Tile: [4H] [1E] [6H] [5A] [4I]]
`;

exports[`Game Play > (34) Player 1 places tile [5A] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $4200 | [4H] [1E] [6H] [4I] | A:6 L:1
P2 | $3600 | [3D] [12C] [5I] [2B] [11C] | A:7 L:3

P1 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (35) Player 1 purchases American 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $3900 | [4H] [1E] [6H] [4I] | A:7 L:1
P2 | $3600 | [3D] [12C] [5I] [2B] [11C] | A:7 L:3

P1 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (36) Player 1 purchases Luxor 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $3700 | [4H] [1E] [6H] [4I] | A:7 L:2
P2 | $3600 | [3D] [12C] [5I] [2B] [11C] | A:7 L:3

P1 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (37) Player 1 purchases Luxor 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $3500 | [4H] [1E] [6H] [4I] | A:7 L:3
P2 | $3600 | [3D] [12C] [5I] [2B] [11C] | A:7 L:3

P1 [End Turn]
`;

exports[`Game Play > (38) Player 1 ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - - - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $3500 | [4H] [1E] [6H] [4I] [2E] | A:7 L:3
P2 | $3600 | [3D] [12C] [5I] [2B] [11C] | A:7 L:3

P2 [Choose Tile: [3D] [12C] [5I] [2B] [11C]]
`;

exports[`Game Play > (39) Player 2 places tile [3D] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $3500 | [4H] [1E] [6H] [4I] [2E] | A:7 L:3
P2 | $3600 | [12C] [5I] [2B] [11C] | A:7 L:3

P2 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (40) Player 2 purchases American 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $3500 | [4H] [1E] [6H] [4I] [2E] | A:7 L:3
P2 | $3300 | [12C] [5I] [2B] [11C] | A:8 L:3

P2 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (41) Player 2 purchases American 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $3500 | [4H] [1E] [6H] [4I] [2E] | A:7 L:3
P2 | $3000 | [12C] [5I] [2B] [11C] | A:9 L:3

P2 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (42) Player 2 purchases Luxor 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $3500 | [4H] [1E] [6H] [4I] [2E] | A:7 L:3
P2 | $2800 | [12C] [5I] [2B] [11C] | A:9 L:4

P2 [End Turn]
`;

exports[`Game Play > (43) Player 2 ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - - 0 - - - - -
 - - - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $3500 | [4H] [1E] [6H] [4I] [2E] | A:7 L:3
P2 | $2800 | [12C] [5I] [2B] [11C] [9A] | A:9 L:4

P1 [Choose Tile: [4H] [1E] [6H] [4I] [2E]]
`;

exports[`Game Play > (44) Player 1 places tile [2E] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $3500 | [4H] [1E] [6H] [4I] | A:7 L:3
P2 | $2800 | [12C] [5I] [2B] [11C] [9A] | A:9 L:4

P1 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (45) Player 1 purchases American 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $3200 | [4H] [1E] [6H] [4I] | A:8 L:3
P2 | $2800 | [12C] [5I] [2B] [11C] [9A] | A:9 L:4

P1 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (46) Player 1 purchases American 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $2900 | [4H] [1E] [6H] [4I] | A:9 L:3
P2 | $2800 | [12C] [5I] [2B] [11C] [9A] | A:9 L:4

P1 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (47) Player 1 purchases American 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $2600 | [4H] [1E] [6H] [4I] | A:10 L:3
P2 | $2800 | [12C] [5I] [2B] [11C] [9A] | A:9 L:4

P1 [End Turn]
`;

exports[`Game Play > (48) Player 1 ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - - -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $2600 | [4H] [1E] [6H] [4I] [6B] | A:10 L:3
P2 | $2800 | [12C] [5I] [2B] [11C] [9A] | A:9 L:4

P2 [Choose Tile: [12C] [5I] [2B] [11C] [9A]]
`;

exports[`Game Play > (49) Player 2 places tile [11C] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $2600 | [4H] [1E] [6H] [4I] [6B] | A:10 L:3
P2 | $2800 | [12C] [5I] [2B] [9A] | A:9 L:4

P2 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (50) Player 2 purchases American 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $2600 | [4H] [1E] [6H] [4I] [6B] | A:10 L:3
P2 | $2500 | [12C] [5I] [2B] [9A] | A:10 L:4

P2 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (51) Player 2 purchases American 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $2600 | [4H] [1E] [6H] [4I] [6B] | A:10 L:3
P2 | $2200 | [12C] [5I] [2B] [9A] | A:11 L:4

P2 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (52) Player 2 ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - - - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $2600 | [4H] [1E] [6H] [4I] [6B] | A:10 L:3
P2 | $2200 | [12C] [5I] [2B] [9A] [9H] | A:11 L:4

P1 [Choose Tile: [4H] [1E] [6H] [4I] [6B]]
`;

exports[`Game Play > (53) Player 1 places tile [6B] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $2600 | [4H] [1E] [6H] [4I] | A:10 L:3
P2 | $2200 | [12C] [5I] [2B] [9A] [9H] | A:11 L:4

P1 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (54) Player 1 purchases Luxor 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $2400 | [4H] [1E] [6H] [4I] | A:10 L:4
P2 | $2200 | [12C] [5I] [2B] [9A] [9H] | A:11 L:4

P1 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (55) Player 1 purchases Luxor 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $2200 | [4H] [1E] [6H] [4I] | A:10 L:5
P2 | $2200 | [12C] [5I] [2B] [9A] [9H] | A:11 L:4

P1 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (56) Player 1 purchases Luxor 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $2000 | [4H] [1E] [6H] [4I] | A:10 L:6
P2 | $2200 | [12C] [5I] [2B] [9A] [9H] | A:11 L:4

P1 [End Turn]
`;

exports[`Game Play > (57) Player 1 ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A - - L L
 - - - - - - - - - - - -

P1 | $2000 | [4H] [1E] [6H] [4I] [10D] | A:10 L:6
P2 | $2200 | [12C] [5I] [2B] [9A] [9H] | A:11 L:4

P2 [Choose Tile: [12C] [5I] [2B] [9A] [9H]]
`;

exports[`Game Play > (58) Player 2 places tile [9H] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $2000 | [4H] [1E] [6H] [4I] [10D] | A:10 L:6
P2 | $2200 | [12C] [5I] [2B] [9A] | A:11 L:4

P2 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (59) Player 2 purchases Luxor 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $2000 | [4H] [1E] [6H] [4I] [10D] | A:10 L:6
P2 | $2000 | [12C] [5I] [2B] [9A] | A:11 L:5

P2 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (60) Player 2 purchases Luxor 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $2000 | [4H] [1E] [6H] [4I] [10D] | A:10 L:6
P2 | $1800 | [12C] [5I] [2B] [9A] | A:11 L:6

P2 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (61) Player 2 purchases Luxor 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $2000 | [4H] [1E] [6H] [4I] [10D] | A:10 L:6
P2 | $1600 | [12C] [5I] [2B] [9A] | A:11 L:7

P2 [End Turn]
`;

exports[`Game Play > (62) Player 2 ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - - - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $2000 | [4H] [1E] [6H] [4I] [10D] | A:10 L:6
P2 | $1600 | [12C] [5I] [2B] [9A] [2G] | A:11 L:7

P1 [Choose Tile: [4H] [1E] [6H] [4I] [10D]]
`;

exports[`Game Play > (63) Player 1 places tile [10D] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $2000 | [4H] [1E] [6H] [4I] | A:10 L:6
P2 | $1600 | [12C] [5I] [2B] [9A] [2G] | A:11 L:7

P1 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (64) Player 1 purchases Luxor 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $1800 | [4H] [1E] [6H] [4I] | A:10 L:7
P2 | $1600 | [12C] [5I] [2B] [9A] [2G] | A:11 L:7

P1 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (65) Player 1 purchases Luxor 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $1600 | [4H] [1E] [6H] [4I] | A:10 L:8
P2 | $1600 | [12C] [5I] [2B] [9A] [2G] | A:11 L:7

P1 [Choose Shares: A L] [End Turn]
`;

exports[`Game Play > (66) Player 1 purchases Luxor 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $1400 | [4H] [1E] [6H] [4I] | A:10 L:9
P2 | $1600 | [12C] [5I] [2B] [9A] [2G] | A:11 L:7

P1 [End Turn]
`;

exports[`Game Play > (67) Player 1 ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - 0 -
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $1400 | [4H] [1E] [6H] [4I] [8F] | A:10 L:9
P2 | $1600 | [12C] [5I] [2B] [9A] [2G] | A:11 L:7

P2 [Choose Tile: [12C] [5I] [2B] [9A] [2G]]
`;

exports[`Game Play > (68) Player 2 places tile [12C] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - 0 0
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $1400 | [4H] [1E] [6H] [4I] [8F] | A:10 L:9
P2 | $1600 | [5I] [2B] [9A] [2G] | A:11 L:7

P2 [Choose Hotel: C F I W T]
`;

exports[`Game Play > (69) Player 2 starts Tower 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $1400 | [4H] [1E] [6H] [4I] [8F] | A:10 L:9
P2 | $1600 | [5I] [2B] [9A] [2G] | A:11 L:7 T:1

P2 [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (70) Player 2 purchases Tower 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $1400 | [4H] [1E] [6H] [4I] [8F] | A:10 L:9
P2 | $1400 | [5I] [2B] [9A] [2G] | A:11 L:7 T:2

P2 [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (71) Player 2 purchases Tower 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $1400 | [4H] [1E] [6H] [4I] [8F] | A:10 L:9
P2 | $1200 | [5I] [2B] [9A] [2G] | A:11 L:7 T:3

P2 [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (72) Player 2 purchases Tower 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $1400 | [4H] [1E] [6H] [4I] [8F] | A:10 L:9
P2 | $1000 | [5I] [2B] [9A] [2G] | A:11 L:7 T:4

P2 [End Turn]
`;

exports[`Game Play > (73) Player 2 ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - - - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $1400 | [4H] [1E] [6H] [4I] [8F] | A:10 L:9
P2 | $1000 | [5I] [2B] [9A] [2G] [11B] | A:11 L:7 T:4

P1 [Choose Tile: [4H] [1E] [6H] [4I] [8F]]
`;

exports[`Game Play > (74) Player 1 places tile [8F] 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $1400 | [4H] [1E] [6H] [4I] | A:10 L:9
P2 | $1000 | [5I] [2B] [9A] [2G] [11B] | A:11 L:7 T:4

P1 [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (75) Player 1 purchases Tower 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $1200 | [4H] [1E] [6H] [4I] | A:10 L:9 T:1
P2 | $1000 | [5I] [2B] [9A] [2G] [11B] | A:11 L:7 T:4

P1 [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (76) Player 1 purchases Tower 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $1000 | [4H] [1E] [6H] [4I] | A:10 L:9 T:2
P2 | $1000 | [5I] [2B] [9A] [2G] [11B] | A:11 L:7 T:4

P1 [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (77) Player 1 purchases Tower 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $800 | [4H] [1E] [6H] [4I] | A:10 L:9 T:3
P2 | $1000 | [5I] [2B] [9A] [2G] [11B] | A:11 L:7 T:4

P1 [End Turn]
`;

exports[`Game Play > (78) Player 1 ends turn 1`] = `
 - - - - 0 - - - - - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $800 | [4H] [1E] [6H] [4I] [6A] | A:10 L:9 T:3
P2 | $1000 | [5I] [2B] [9A] [2G] [11B] | A:11 L:7 T:4

P2 [Choose Tile: [5I] [2B] [9A] [2G] [11B]]
`;

exports[`Game Play > (79) Player 2 places tile [9A] 1`] = `
 - - - - 0 - - - 0 - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $800 | [4H] [1E] [6H] [4I] [6A] | A:10 L:9 T:3
P2 | $1000 | [5I] [2B] [2G] [11B] | A:11 L:7 T:4

P2 [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (80) Player 2 purchases Tower 1`] = `
 - - - - 0 - - - 0 - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $800 | [4H] [1E] [6H] [4I] [6A] | A:10 L:9 T:3
P2 | $800 | [5I] [2B] [2G] [11B] | A:11 L:7 T:5

P2 [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (81) Player 2 purchases Tower 1`] = `
 - - - - 0 - - - 0 - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $800 | [4H] [1E] [6H] [4I] [6A] | A:10 L:9 T:3
P2 | $600 | [5I] [2B] [2G] [11B] | A:11 L:7 T:6

P2 [Choose Shares: A T L] [End Turn]
`;

exports[`Game Play > (82) Player 2 purchases Tower 1`] = `
 - - - - 0 - - - 0 - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $800 | [4H] [1E] [6H] [4I] [6A] | A:10 L:9 T:3
P2 | $400 | [5I] [2B] [2G] [11B] | A:11 L:7 T:7

P2 [End Turn]
`;

exports[`Game Play > (83) Player 2 ends turn 1`] = `
 - - - - 0 - - - 0 - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $800 | [4H] [1E] [6H] [4I] [6A] | A:10 L:9 T:3
P2 | $400 | [5I] [2B] [2G] [11B] [7E] | A:11 L:7 T:7

P1 [Choose Tile: [4H] [1E] [6H] [4I] [6A]]
`;

exports[`Game Play > (84) Player 1 places tile [6A] 1`] = `
 - - - - 0 0 - - 0 - - -
 - - - - - 0 - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $800 | [4H] [1E] [6H] [4I] | A:10 L:9 T:3
P2 | $400 | [5I] [2B] [2G] [11B] [7E] | A:11 L:7 T:7

P1 [Choose Hotel: C F I W]
`;

exports[`Game Play > (85) Player 1 starts Worldwide 1`] = `
 - - - - W W - - 0 - - -
 - - - - - W - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $800 | [4H] [1E] [6H] [4I] | A:10 L:9 T:3 W:1
P2 | $400 | [5I] [2B] [2G] [11B] [7E] | A:11 L:7 T:7

P1 [Choose Shares: A W T L] [End Turn]
`;

exports[`Game Play > (86) Player 1 purchases Luxor 1`] = `
 - - - - W W - - 0 - - -
 - - - - - W - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $600 | [4H] [1E] [6H] [4I] | A:10 L:10 T:3 W:1
P2 | $400 | [5I] [2B] [2G] [11B] [7E] | A:11 L:7 T:7

P1 [Choose Shares: A W T L] [End Turn]
`;

exports[`Game Play > (87) Player 1 purchases Luxor 1`] = `
 - - - - W W - - 0 - - -
 - - - - - W - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $400 | [4H] [1E] [6H] [4I] | A:10 L:11 T:3 W:1
P2 | $400 | [5I] [2B] [2G] [11B] [7E] | A:11 L:7 T:7

P1 [Choose Shares: W T L] [End Turn]
`;

exports[`Game Play > (88) Player 1 purchases Luxor 1`] = `
 - - - - W W - - 0 - - -
 - - - - - W - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $200 | [4H] [1E] [6H] [4I] | A:10 L:12 T:3 W:1
P2 | $400 | [5I] [2B] [2G] [11B] [7E] | A:11 L:7 T:7

P1 [End Turn]
`;

exports[`Game Play > (89) Player 1 ends turn 1`] = `
 - - - - W W - - 0 - - -
 - - - - - W - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - - - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $200 | [4H] [1E] [6H] [4I] [8A] | A:10 L:12 T:3 W:1
P2 | $400 | [5I] [2B] [2G] [11B] [7E] | A:11 L:7 T:7

P2 [Choose Tile: [5I] [2B] [2G] [11B] [7E]]
`;

exports[`Game Play > (90) Player 2 places tile [7E] 1`] = `
 - - - - W W - - 0 - - -
 - - - - - W - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - 0 - - 0 - -
 - 0 - - 0 - 0 - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $200 | [4H] [1E] [6H] [4I] [8A] | A:10 L:12 T:3 W:1
P2 | $400 | [5I] [2B] [2G] [11B] | A:11 L:7 T:7

P2 [Choose Hotel: C F I]
`;

exports[`Game Play > (91) Player 2 starts Festival 1`] = `
 - - - - W W - - 0 - - -
 - - - - - W - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - F - - 0 - -
 - 0 - - 0 - F - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $200 | [4H] [1E] [6H] [4I] [8A] | A:10 L:12 T:3 W:1
P2 | $400 | [5I] [2B] [2G] [11B] | A:11 F:1 L:7 T:7

P2 [Choose Shares: F W T L] [End Turn]
`;

exports[`Game Play > (92) Player 2 purchases Festival 1`] = `
 - - - - W W - - 0 - - -
 - - - - - W - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - F - - 0 - -
 - 0 - - 0 - F - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $200 | [4H] [1E] [6H] [4I] [8A] | A:10 L:12 T:3 W:1
P2 | $100 | [5I] [2B] [2G] [11B] | A:11 F:2 L:7 T:7

P2 [End Turn]
`;

exports[`Game Play > (93) Player 2 ends turn 1`] = `
 - - - - W W - - 0 - - -
 - - - - - W - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - F - - 0 - -
 - 0 - - 0 - F - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $200 | [4H] [1E] [6H] [4I] [8A] | A:10 L:12 T:3 W:1
P2 | $100 | [5I] [2B] [2G] [11B] [9E] | A:11 F:2 L:7 T:7

P1 [Choose Tile: [4H] [1E] [6H] [4I] [8A]]
`;

exports[`Game Play > (94) Player 1 places tile [8A] 1`] = `
 - - - - W W - 0 0 - - -
 - - - - - W - 0 - - - -
 - - - - - - - - - - T T
 - - 0 - - - F - - 0 - -
 - 0 - - 0 - F - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $200 | [4H] [1E] [6H] [4I] | A:10 L:12 T:3 W:1
P2 | $100 | [5I] [2B] [2G] [11B] [9E] | A:11 F:2 L:7 T:7

P1 [Choose Hotel: C I]
`;

exports[`Game Play > (95) Player 1 starts Imperial 1`] = `
 - - - - W W - I I - - -
 - - - - - W - I - - - -
 - - - - - - - - - - T T
 - - 0 - - - F - - 0 - -
 - 0 - - 0 - F - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $200 | [4H] [1E] [6H] [4I] | A:10 I:1 L:12 T:3 W:1
P2 | $100 | [5I] [2B] [2G] [11B] [9E] | A:11 F:2 L:7 T:7

P1 [Choose Shares: T L] [End Turn]
`;

exports[`Game Play > (96) Player 1 purchases Luxor 1`] = `
 - - - - W W - I I - - -
 - - - - - W - I - - - -
 - - - - - - - - - - T T
 - - 0 - - - F - - 0 - -
 - 0 - - 0 - F - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $0 | [4H] [1E] [6H] [4I] | A:10 I:1 L:13 T:3 W:1
P2 | $100 | [5I] [2B] [2G] [11B] [9E] | A:11 F:2 L:7 T:7

P1 [End Turn]
`;

exports[`Game Play > (97) Player 1 ends turn 1`] = `
 - - - - W W - I I - - -
 - - - - - W - I - - - -
 - - - - - - - - - - T T
 - - 0 - - - F - - 0 - -
 - 0 - - 0 - F - - - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $0 | [4H] [1E] [6H] [4I] [4F] | A:10 I:1 L:13 T:3 W:1
P2 | $100 | [5I] [2B] [2G] [11B] [9E] | A:11 F:2 L:7 T:7

P2 [Choose Tile: [5I] [2B] [2G] [11B] [9E]]
`;

exports[`Game Play > (98) Player 2 places tile [9E] 1`] = `
 - - - - W W - I I - - -
 - - - - - W - I - - - -
 - - - - - - - - - - T T
 - - 0 - - - F - - 0 - -
 - 0 - - 0 - F - 0 - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $0 | [4H] [1E] [6H] [4I] [4F] | A:10 I:1 L:13 T:3 W:1
P2 | $100 | [5I] [2B] [2G] [11B] | A:11 F:2 L:7 T:7

P2 [End Turn]
`;

exports[`Game Play > (99) Player 2 ends turn 1`] = `
 - - - - W W - I I - - -
 - - - - - W - I - - - -
 - - - - - - - - - - T T
 - - 0 - - - F - - 0 - -
 - 0 - - 0 - F - 0 - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - - - A A - L L
 - - - - - - - - - - - -

P1 | $0 | [4H] [1E] [6H] [4I] [4F] | A:10 I:1 L:13 T:3 W:1
P2 | $100 | [5I] [2B] [2G] [11B] [11D] | A:11 F:2 L:7 T:7

P1 [Choose Tile: [4H] [1E] [6H] [4I] [4F]]
`;

exports[`Game Play > (100) Player 1 places tile [6H] 1`] = `
 - - - - W W - I I - - -
 - - - - - W - I - - - -
 - - - - - - - - - - T T
 - - 0 - - - F - - 0 - -
 - 0 - - 0 - F - 0 - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - 0 - A A - L L
 - - - - - - - - - - - -

P1 | $0 | [4H] [1E] [4I] [4F] | A:10 I:1 L:13 T:3 W:1
P2 | $100 | [5I] [2B] [2G] [11B] [11D] | A:11 F:2 L:7 T:7

P1 [End Turn]
`;

exports[`Game Play > (101) Player 1 ends turn 1`] = `
 - - - - W W - I I - - -
 - - - - - W - I - - - -
 - - - - - - - - - - T T
 - - 0 - - - F - - 0 - -
 - 0 - - 0 - F - 0 - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - 0 - A A - L L
 - - - - - - - - - - - -

P1 | $0 | [4H] [1E] [4I] [4F] [8E] | A:10 I:1 L:13 T:3 W:1
P2 | $100 | [5I] [2B] [2G] [11B] [11D] | A:11 F:2 L:7 T:7

P2 [Choose Tile: [5I] [2B] [2G] [11B] [11D]]
`;

exports[`Game Play > (102) Player 2 places tile [11D] 1`] = `
 - - - - W W - I I - - -
 - - - - - W - I - - - -
 - - - - - - - - - - T T
 - - 0 - - - F - - T T -
 - 0 - - 0 - F - 0 - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - 0 - A A - L L
 - - - - - - - - - - - -

P1 | $0 | [4H] [1E] [4I] [4F] [8E] | A:10 I:1 L:13 T:3 W:1
P2 | $100 | [5I] [2B] [2G] [11B] | A:11 F:2 L:7 T:7

P2 [End Turn]
`;

exports[`Game Play > (103) Player 2 ends turn 1`] = `
 - - - - W W - I I - - -
 - - - - - W - I - - - -
 - - - - - - - - - - T T
 - - 0 - - - F - - T T -
 - 0 - - 0 - F - 0 - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - 0 - A A - L L
 - - - - - - - - - - - -

P1 | $0 | [4H] [1E] [4I] [4F] [8E] | A:10 I:1 L:13 T:3 W:1
P2 | $100 | [5I] [2B] [2G] [11B] [4A] | A:11 F:2 L:7 T:7

P1 [Choose Tile: [4H] [1E] [4I] [4F] [8E]]
`;

exports[`Game Play > (104) Player 1 places tile [8E] 1`] = `
 - - - - W W - I I - - -
 - - - - - W - I - - - -
 - - - - - - - - - - T T
 - - 0 - - - A - - T T -
 - 0 - - 0 - A A A - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - 0 - A A - L L
 - - - - - - - - - - - -

P1 | $0 | [4H] [1E] [4I] [4F] | A:10 I:1 L:13 T:3 W:1
P2 | $4600 | [5I] [2B] [2G] [11B] [4A] | A:11 F:2 L:7 T:7

P2 [Sell (1/2) Festival Share] [Keep (1/2) Festival Share] [Trade (2/2) Festival for 1 American]
`;

exports[`Game Play > (105) Player 2 trades 2 Festival -> American 1`] = `
 - - - - W W - I I - - -
 - - - - - W - I - - - -
 - - - - - - - - - - T T
 - - 0 - - - A - - T T -
 - 0 - - 0 - A A A - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - 0 - A A - L L
 - - - - - - - - - - - -

P1 | $0 | [4H] [1E] [4I] [4F] | A:10 I:1 L:13 T:3 W:1
P2 | $4600 | [5I] [2B] [2G] [11B] [4A] | A:12 L:7 T:7

P1 [End Turn]
`;

exports[`Game Play > (106) Player 1 ends turn 1`] = `
 - - - - W W - I I - - -
 - - - - - W - I - - - -
 - - - - - - - - - - T T
 - - 0 - - - A - - T T -
 - 0 - - 0 - A A A - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - 0 - A A - L L
 - - - - - - - - - - - -

P1 | $0 | [4H] [1E] [4I] [4F] [6I] | A:10 I:1 L:13 T:3 W:1
P2 | $4600 | [5I] [2B] [2G] [11B] [4A] | A:12 L:7 T:7

P2 [Choose Tile: [5I] [2B] [2G] [11B] [4A]]
`;

exports[`Game Play > (107) Player 2 places tile [5I] 1`] = `
 - - - - W W - I I - - -
 - - - - - W - I - - - -
 - - - - - - - - - - T T
 - - 0 - - - A - - T T -
 - 0 - - 0 - A A A - - -
 - - - - - - - A - - - 0
 - - - - - - - A - - - -
 - - - - - 0 - A A - L L
 - - - - 0 - - - - - - -

P1 | $0 | [4H] [1E] [4I] [4F] [6I] | A:10 I:1 L:13 T:3 W:1
P2 | $4600 | [2B] [2G] [11B] [4A] | A:12 L:7 T:7

P2 [Choose Shares: A I W T L] [End Turn]
`;
